--- a/Bender.yml
+++ b/Bender.yml
@@ -47,7 +47,6 @@ dependencies:
   udma_hyper:             { git: "https://github.com/pulp-platform/udma_hyper.git", rev: "83ab704f9d1c5f9e5353268c901fe95c36bcea36" }
   hwpe-mac-engine:        { git: "https://github.com/pulp-platform/hwpe-mac-engine.git", version: 1.3.3 }
   riscv-dbg:              { git: "https://github.com/pulp-platform/riscv-dbg.git", version: 0.5.0 }
-  #register_interface:     { git: "https://github.com/pulp-platform/register_interface.git", version: 0.3.1 }
   register_interface:     { path: "./register_interface"} 
 
 sources:
@@ -64,7 +63,34 @@ sources:
       - rtl/keccak_ip/keccak.vhd
       - rtl/keccak_ip/keccak_top.sv
 
-  # pulp_soc
+  # ntt_intt_pwm
+  - files:
+      - rtl/ntt_intt_pwm_ip/gen_sv/ntt_intt_pwm_reg_pkg.sv
+      - rtl/ntt_intt_pwm_ip/gen_sv/ntt_intt_pwm_reg_top.sv
+      - rtl/ntt_intt_pwm_ip/param.vhd
+      - rtl/ntt_intt_pwm_ip/reg_rst.vhd
+      - rtl/ntt_intt_pwm_ip/reg_N_level_rst_n.vhd
+      - rtl/ntt_intt_pwm_ip/shiftreg.vhd
+      - rtl/ntt_intt_pwm_ip/BRAM.vhd
+      - rtl/ntt_intt_pwm_ip/BROM_TW.vhd
+      - rtl/ntt_intt_pwm_ip/adder.vhd
+      - rtl/ntt_intt_pwm_ip/address_generator.vhd
+      - rtl/ntt_intt_pwm_ip/bN_2to1mux.vhd
+      - rtl/ntt_intt_pwm_ip/barrett.vhd
+      - rtl/ntt_intt_pwm_ip/butterfly.vhd
+      - rtl/ntt_intt_pwm_ip/full_adder.vhd
+      - rtl/ntt_intt_pwm_ip/half_adder.vhd
+      - rtl/ntt_intt_pwm_ip/intmul.vhd
+      - rtl/ntt_intt_pwm_ip/modadd.vhd
+      - rtl/ntt_intt_pwm_ip/modmul.vhd
+      - rtl/ntt_intt_pwm_ip/modsub.vhd
+      - rtl/ntt_intt_pwm_ip/montgomery.vhd
+      - rtl/ntt_intt_pwm_ip/ntt_intt_pwm.vhd
+      - rtl/ntt_intt_pwm_ip/ntt_intt_pwm_top.sv
+
+          
+  
+ # pulp_soc
   - include_dirs:
       - rtl/include
     files:
